:icons: font

////
* Write changelog entries in present tense
* Include GitHub issue or PR if possible using link:http://...[#123] format
* Review your changelog entries
* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[v0.18.1]]
== 0.18.1 (TBD)

icon:check[] REST: Creating a release with fixed UUID will now invoke the node migration.

icon:check[] Java Rest Client: Missing methods to start schema/microschema migrations for a release have been added.

[[v0.18.0]]
== 0.18.0 (06.04.2018)

icon:bullhorn[] GraphQL filtering

[quote]
____
This version of Gentics Mesh introduces _GraphQL filtering_. A detailed description of this feature can be found in our link:https://getmesh.io/docs/beta/graphql.html#_filtering[Documentation].
____

---

CAUTION: Search: The  `/api/v1/search/reindex` endpoint was replaced by `/api/v1/search/sync`.

icon:plus[] Docs: The link:contributing.html[Contribution Guide] has been added.

icon:plus[] The `/api/v1/search/sync` endpoint can now be used to trigger the differential synchronization of search indices. 
            The indices will no longer be dropped and re-populated. Instead only needed actions will be executed to sync the index with the Gentics Mesh data.

icon:plus[] The `/api/v1/search/clear` endpoint has been added. It can be used to re-create all Elasticsearch indices which are managed by Gentics Mesh. 
            Note that this operation does not invoke the index sync.

icon:plus[] Docker: A new volume location for the data directory of the embedded elasticsearch has been added.
                    You can now use the `/elasticsearch/data` folder to mount your elasticsearch data files. link:https://github.com/gentics/mesh/issues/348[#348]

icon:plus[] REST: The `/api/v1/search/status` endpoint has been enhanced. The endpoint will now also return the current elasticsearch sync progress.
